# gogoo-panel-devices

./: .anjuta_sym_db.db  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.ac~  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: CMakeLists.txt  Makefile  Makefile.in  com.meego.UX.Shell.Panels.devices.service  gogoo-panel-devices.desktop.in  gogoo-panel-devices.schemas.in  meego-panel-devices.desktop  meego-panel-devices.desktop.in
data/icons/: CMakeLists.txt  Makefile  Makefile.in
data/theme/: CMakeLists.txt  Makefile  Makefile.in
egg-console-kit/: CMakeLists.txt  Makefile  Makefile.in  egg-console-kit.c
egg-console-kit/.deps/: egg-console-kit.Plo  egg-debug.Plo
gpm/: CMakeLists.txt  Makefile  Makefile.in  gpm-brightness-xrandr.c  gpm-brightness-xrandr.c~
gpm/.deps/: egg-discrete.Plo  gpm-brightness-xrandr.Plo
gvc/: CMakeLists.txt  Makefile  Makefile.in  gvc-channel-map.c  gvc-mixer-card.c  gvc-mixer-control.c  gvc-mixer-event-role.c  gvc-mixer-sink-input.c  gvc-mixer-sink.c  gvc-mixer-source-output.c  gvc-mixer-source.c  gvc-mixer-stream.c
gvc/.deps/: gvc-channel-map.Plo  gvc-mixer-card.Plo  gvc-mixer-control.Plo  gvc-mixer-event-role.Plo  gvc-mixer-sink-input.Plo  gvc-mixer-sink.Plo  gvc-mixer-source-output.Plo  gvc-mixer-source.Plo  gvc-mixer-stream.Plo
po/: CMakeLists.txt  Makefile  Makefile.in  POTFILES  ar.gmo  ast.gmo  ca.gmo  ca@valencia.gmo  cs.gmo  da.gmo  de.gmo  en_GB.gmo  es.gmo  fa.gmo  fi.gmo  fr.gmo  gl.gmo  hu.gmo  id.gmo  it.gmo  ja.gmo  ko.gmo  nl.gmo  pa.gmo  pl.gmo  pt.gmo  pt_BR.gmo  ru.gmo  sk.gmo  sv.gmo  tr.gmo  wa.gmo  zh_CN.gmo  zh_TW.gmo
power-icon/: Makefile  Makefile.in
power-icon/data/: CMakeLists.txt  Makefile  Makefile.in  com.meego.UX.Shell.Panels.power.service  gogoo-power-icon.desktop.in  meego-power-icon.desktop.in
power-icon/data/theme/: CMakeLists.txt  Makefile  Makefile.in  power-icon.css
power-icon/src/: CMakeLists.txt  Makefile  Makefile.in  com.meego.UX.Shell.Panels.power.service.in  meego-power-icon.c  mpd-global-key.c  mpd-global-key.c~  mpd-idle-manager.c  mpd-idle-manager.c~  mpd-lid-device.c  mpd-lid-device.c~  mpd-power-icon.c  mpd-power-icon.c~  mpd-shutdown-notification.c
power-icon/src/.deps/: meego-power-icon.Po  mpd-battery-device.Po  mpd-display-device.Po  mpd-global-key.Po  mpd-idle-manager.Po  mpd-lid-device.Po  mpd-power-icon.Po  mpd-shutdown-notification.Po
power-icon/tests/: Makefile  Makefile.in  test-brightness-keys.c  test-brightness-keys.c~
power-icon/tests/.deps/: mpd-conf.Po  mpd-global-key.Po  mpd-gobject.Po  mpd-idle-manager.Po  mpd-lid-device.Po  mpd-power-icon.Po  mpd-shutdown-notification.Po  test-battery-notification.Po  test-brightness-keys.Po  test-idle-manager.Po  test-shutdown-notification.Po  test-xbacklight.Po
src/: CMakeLists.txt  Makefile  Makefile.in  com.meego.UX.Shell.Panels.devices.service.in  meego-panel-devices.c  mpd-battery-device.c  mpd-battery-device.c~  mpd-battery-tile.c  mpd-computer-tile.c  mpd-conf.c  mpd-default-device-tile.c  mpd-devices-tile.c  mpd-disk-tile.c  mpd-folder-button.c  mpd-folder-tile.c  mpd-gobject.c  mpd-panel.c  mpd-shell.c  mpd-storage-device-tile.c  mpd-storage-device.c  mpd-volume-tile.c
src/.deps/: meego-panel-devices.Po  mpd-battery-device.Po  mpd-battery-icon.Po  mpd-battery-tile.Po  mpd-brightness-tile.Po  mpd-computer-pane.Po  mpd-computer-tile.Po  mpd-conf.Po  mpd-default-device-tile.Po  mpd-devices-pane.Po  mpd-devices-tile.Po  mpd-disk-tile.Po  mpd-display-device.Po  mpd-folder-button.Po  mpd-folder-tile.Po  mpd-gobject.Po  mpd-panel.Po  mpd-shell.Po  mpd-storage-device-tile.Po  mpd-storage-device.Po  mpd-volume-tile.Po
tests/: Makefile  Makefile.in
