SET(THEME_SRCS
    toolbar-button.css 
    content-pane-background.png 
    content-pane-header.png 
    devices-coloured.png 
    devices-normal.png 
    directory-highlight.png 
    frame-border.png 
    panel.css 
    seperator.png 
    volume-bars-0.png 
    )

INSTALL(FILES ${THEME_SRCS} DESTINATION ${PKG_DATADIR}/gogoo-panel-devices/theme)



